# snake-game

./: CMakeLists.txt  README.md  main.cpp
Classes/: Food.h
Engine/: Config.h
Engine/Food/: Food.cpp  Food.h
Engine/Game/: Game.cpp  Game.h
Engine/Snake/: Snake.cpp  Snake.h
Engine/Theme/: Colors.cpp  Colors.h
src/Utils/: VectorUtils.cpp  VectorUtils.h
